<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_input_key"
    >
    <fragment
        android:id="@+id/navigation_input_key"
        android:name="com.example.rubbishcatelog.ui.input.InputFragement"
        android:label="@string/input"
        tools:layout="@layout/fragement_input" />
    <fragment
        android:id="@+id/navigation_voice"
        android:name="com.example.rubbishcatelog.ui.voice.VoiceFragement"
        android:label="@string/voice"
        tools:layout="@layout/fragement_voice" />

    <fragment
        android:id="@+id/navigation_img"
        android:name="com.example.rubbishcatelog.ui.image.ImageFragement"
        android:label="@string/image"
        tools:layout="@layout/fragement_image" />


</navigation>