<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/research_bk"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:background="@drawable/research_bk"/>

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="368dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_mine"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:text="@string/inputCanID" />

        <Button
            android:id="@+id/btn2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/CanStatusCheck" />

        <Button
            android:id="@+id/btn3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/IDResearch" />

        <Button
            android:id="@+id/btn1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/getAllRecords" />

        <TextView
            android:id="@+id/info"

            android:layout_width="374dp"
            android:layout_height="147dp" />
    </LinearLayout>
</RelativeLayout>